<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    android:gravity="center"
    tools:context=".User.SigninActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:textColor="@color/theme_color"
        android:fontFamily="@font/lato_black"
        android:textSize="37sp"
        />

    <TextView
        android:id="@+id/asa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/as_a_user"
        android:textColor="@color/grey_40"
        android:textSize="25sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_box"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:maxLength="11"
            android:hint="@string/phone"
            android:textColor="@color/grey_80" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pwd_box"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textColor="@color/grey_80" />
    </com.google.android.material.textfield.TextInputLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_bg"
        android:id="@+id/login_btn">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/lato_black"
            android:textSize="18sp"
            />

    </FrameLayout>
    <TextView
        android:id="@+id/sighuphere"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="end"
        android:fontFamily="@font/lato"
        android:text="@string/don_t_have_an_account_sign_up_here"
        android:textColor="@color/theme_color"
        android:textSize="17sp"
        />
    <TextView
        android:id="@+id/for_tv"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="end"
        android:fontFamily="@font/lato"
        android:text="@string/forgot_password"
        android:textColor="@color/theme_color"
        android:textSize="17sp"
        />


    <Spinner
        android:id="@+id/language_sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/button_bg_outlined"
        android:visibility="gone" />


</LinearLayout>