<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp"
        android:gravity="center"
        tools:context=".Activities.RegisterActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:textColor="@color/theme_color"
            android:fontFamily="@font/lato_black"
            android:textSize="37sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="AS a Manager"
            android:textColor="@color/grey_80"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_box"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"
                android:textColor="@color/grey_80" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/grey_80"
                android:inputType="phone"
                android:hint="@string/phone"
                android:id="@+id/phone_box"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/grey_80"
                android:inputType="text"
                android:hint="@string/company_name"
                android:id="@+id/companyName_box"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/grey_80"
                android:inputType="phone"
                android:hint="@string/number_of_employees"
                android:id="@+id/companySize_box"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/grey_80"
                android:inputType="text"
                android:hint="@string/company_location"
                android:id="@+id/companyLocation_box"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/grey_80"
                android:inputType="text"
                android:hint="@string/company_registration_number"
                android:id="@+id/companyRegistrationno_box"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/grey_80"
                android:hint="@string/password"
                android:maxLength="20"
                android:inputType="textPassword"
                android:id="@+id/pwd_box"/>
        </com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/grey_80"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:id="@+id/cpwd_box"/>
    </com.google.android.material.textfield.TextInputLayout>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bg_outlined"
            android:id="@+id/gender_sp"/>




        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_bg"
            android:id="@+id/signup_btn">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@font/lato_black"
                android:textSize="18sp"
                />

        </FrameLayout>
        <TextView
            android:id="@+id/loginhere_tv"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="end"
            android:fontFamily="@font/lato"
            android:text="@string/already_registered_login_here"
            android:textColor="@color/theme_color"
            android:textSize="17sp"
            />
    </LinearLayout>



</ScrollView>

