<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    tools:context=".Admin.AdminHomeActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/theme_color"
            android:elevation="15dp">

            <ImageView
                android:id="@+id/logout_btn"
                android:layout_width="32dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginRight="15dp"
                android:src="@drawable/logout_ic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:fontFamily="@font/lato_black"
                android:text="@string/admin_home"
                android:layout_marginLeft="15dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/white"
                android:textSize="22sp" />



        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="40dp"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_bg"
                android:id="@+id/schedule_btn">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/schedules"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:fontFamily="@font/lato_black"
                    android:textSize="18sp"
                    />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_bg"
                android:id="@+id/ads_btn">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ads"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:fontFamily="@font/lato_black"
                    android:textSize="18sp"
                    />

            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/button_bg"
                android:id="@+id/companies_btn">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/companies"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:fontFamily="@font/lato_black"
                    android:textSize="18sp"
                    />

            </FrameLayout>


        </LinearLayout>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>